Fixed navbar collapse animation

--- a/src/components/navbar/_navbar.scss
+++ b/src/components/navbar/_navbar.scss
@@ -9,6 +9,10 @@
   }
 }
 
+.nav {
+  backface-visibility: hidden;
+}
+
 .fa-check-circle {
   font-size: $font-size-base;
 }
